Fix Safari making text sizes too big

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -21,6 +21,7 @@ body {
   line-height: 1.75;
   transition: background-color 0.15s ease-in-out;
   -webkit-font-smoothing: antialiased;
+  -webkit-text-size-adjust: 100%;
 }
 
 [data-theme="dark"] body {
